using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace GenSpil.Type
{
  public enum ConditionEnum

    /// <summary>
    /// BoardGames ConditionEnum 
    /// </summary>
    { 
        Ny,
        Brugt,
        God,
        Slidt

    }
}
