using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace GenSpil.Type
{
    /// <summary>
    /// BoardGames Genre 
    /// </summary>
    public enum Genre
    {
        Familie,
        Børnespil, 
        Rollespil,
        Selskab,
        Strategi,
        Quiz
            
    }


}
