namespace GenSpil.Type;

/// <summary>
/// Role of the user
/// </summary>
public enum Role
{
    Admin,
    User,
    Guest
}
